--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ build
 # other
 eclipse
 run
+/changelog.txt
+/CREDITS.txt
+/LICENSE-Paulscode IBXM Library.txt
+/LICENSE-Paulscode SoundSystem CodecIBXM.txt
+/README.txt
