--- a/build.gradle
+++ b/build.gradle
@@ -60,9 +60,9 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-    deobfCompile"slimeknights.mantle:Mantle:1.12-1.3.3.56"
-    deobfCompile "slimeknights:TConstruct:1.12.2-2.13.0.188"
-    deobfProvided "mezz.jei:jei_1.12.2:4.16.1.302:api"
+    compile "slimeknights.mantle:Mantle:1.12-1.3.3.56"
+    compile "slimeknights:TConstruct:1.12.2-2.13.0.188"
+    compile "mezz.jei:jei_1.12.2:4.16.1.302:api"
     runtime "mezz.jei:jei_1.12.2:4.16.1.302"
 }
 
