--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[39,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="[36,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
 license="All rights reserved"
@@ -19,7 +19,7 @@ modId="xtradrinks" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="1.1" #mandatory
+version="1.0" #mandatory
  # A display name for the mod
 displayName="Xtra Drinks" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -33,7 +33,7 @@ credits="Strikeboom made the code and ChauhanSai made the textures" #optional
 # A text field displayed in the mod UI
 authors="Strikeboom and ChauhanSai" #optional
 # The description text for the mod (multi line!) (#mandatory)
-description="Venture into a new world with XtraDrinks. This mod adds new fluids into the game with a new mechanic, dehydration. Explore new structures and craft new foods around the world. You can become the master liquidor. Has support for JEI"
+description="Venture into a new world with XtraDrinks. This mod adds new fluids into the game with a new mechanic, dehydration. Explore new structures and craft new foods around the world. You can become the master liquidor. Has support for JEI and TConstruct"
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.xtradrinks]] #optional
     # the modid of the dependency
@@ -41,7 +41,7 @@ description="Venture into a new world with XtraDrinks. This mod adds new fluids 
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[39,)" #mandatory
+    versionRange="[36,)" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
@@ -51,6 +51,6 @@ description="Venture into a new world with XtraDrinks. This mod adds new fluids 
     modId="minecraft"
     mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
-    versionRange="[1.18.2,1.19)"
+    versionRange="[1.16.5,1.17)"
     ordering="NONE"
     side="BOTH"
