change recipe layout

--- a/src/main/resources/data/xtradrinks/recipes/dehydrator/dehydrated_apple.json
+++ b/src/main/resources/data/xtradrinks/recipes/dehydrator/dehydrated_apple.json
@@ -3,5 +3,5 @@
   "input": {
     "item": "minecraft:apple"
   },
-  "output": "xtradrinks:dehydrated_apple"
+  "result": "xtradrinks:dehydrated_apple"
 }
