--- a/src/main/resources/data/xtradrinks/recipes/dehydrator/dehydrated_pineapple.json
+++ b/src/main/resources/data/xtradrinks/recipes/dehydrator/dehydrated_pineapple.json
@@ -3,5 +3,5 @@
   "input": {
     "item": "xtradrinks:pineapple"
   },
-  "output": "xtradrinks:dehydrated_pineapple"
+  "result": "xtradrinks:dehydrated_pineapple"
 }
